# server.js
@@ -1,11 +1,25 @@
+require('dotenv').config();
+const path = require('path');
 const express = require('express');
 const app = express();
 const port = process.env.PORT || 3000;
 const mongodb = require('./data/database');
+const passport = require('passport');
+const session = require('express-session');
+const GithubStrategy = require('passport-github2').Strategy;
+const cors = require('cors');
 const bodyParser = require('body-parser');
 
 
 app.use(bodyParser.json());
+app.use(session({
+    secret: "secret",
+    resave: false,
+    saveUninitialized: true,
+}))
+
+app.use(passport.initialize());
+app.use(passport.session());
 app.use((req, res, next) => {
     res.setHeader('Access-Control-Allow-Origin', '*');
     res.setHeader(
@@ -15,7 +29,37 @@ app.use((req, res, next) => {
     res.setHeader('Access-Control-Allow-Methods', 'GET, POST, PUT, DELETE, OPTIONS');
     next();
 })
-app.use('/', require('./routes'));
+
+app.use(cors({ methods: ['GET', 'POST', 'PUT', 'DELETE', 'PATCH']}));
+
+app.use(cors({origin: '*'}));
+app.use("/", require("./routes/index"));
+
+
+passport.use(new GithubStrategy(
+  {
+    clientID: process.env.GITHUB_CLIENT_ID,
+    clientSecret: process.env.GITHUB_CLIENT_SECRET,
+    callbackURL: process.env.GITHUB_CALLBACK_URL
+  },
+  (accessToken, refreshToken, profile, done) => {
+    return done(null, profile);
+  }
+));
+
+passport.serializeUser((user, done) => done(null, user));
+passport.deserializeUser((user, done) => done(null, user));
+
+app.get("/", (req, res) => {
+  res.send(req.session.user !== undefined ? `Logged in as ${req.session.user.username}` : "Logged out");
+});
+
+app.get("/github/callback", passport.authenticate("github", {
+  failureRedirect: "/api-docs", session: false
+}), (req, res) => {
+  req.session.user = req.user;
+  res.redirect("/");
+});
 
 mongodb.initDb((err) => {
     if (err) {
